--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-debhelper (7.4.8) UNRELEASED; urgency=low
+debhelper (7.4.8) unstable; urgency=low
 
   * Parallel building support is no longer enabled by default. It can still
     be enabled by using the --max-parallel option. This was necessary because
-    some buildds build with -j2 by default.
+    some buildds build with -j2 by default. (See #532805)
   * dh: Document --no-act. Closes: #557505
   * dh_makeshlibs: Make -X also exclude libraries from the symbols file.
     Closes: #557603 (Peter Samuelson)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 22 Nov 2009 13:32:50 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 23 Nov 2009 13:57:10 -0500
 
 debhelper (7.4.7) unstable; urgency=low
 
