--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.9) UNRELEASED; urgency=low
+
+  * Typo. Closes: #558654
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Nov 2009 14:06:48 -0500
+
 debhelper (7.4.8) unstable; urgency=low
 
   * Parallel building support is no longer enabled by default. It can still
