--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (7.4.9) UNRELEASED; urgency=low
 
   * Typo. Closes: #558654
+  * dh_installinit: Fix installation of defaults file when an upstart job is
+    installed. Closes: #558782
 
  -- Joey Hess <joeyh@debian.org>  Sun, 29 Nov 2009 14:06:48 -0500
 
