--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.4.9) UNRELEASED; urgency=low
+debhelper (7.4.9) unstable; urgency=low
 
   * Typo. Closes: #558654
   * dh_installinit: Fix installation of defaults file when an upstart job is
     installed. Closes: #558782
 
- -- Joey Hess <joeyh@debian.org>  Sun, 29 Nov 2009 14:06:48 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 30 Nov 2009 14:21:10 -0500
 
 debhelper (7.4.8) unstable; urgency=low
 
