changelog and doc rewording

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.10) UNRELEASED; urgency=low
+
+  * Add --parallel option that can be used to enable parallel building
+    without limiting the max number of parallel jobs. (Modestas Vainius)
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 07 Dec 2009 14:34:18 -0500
+
 debhelper (7.4.9) unstable; urgency=low
 
   * Typo. Closes: #558654
