--- a/debhelper.pod
+++ b/debhelper.pod
@@ -219,21 +219,20 @@ directory path that is the same as the source directory path.
 
 =item B<--parallel>
 
-Enable support for parallel builds if underlying build system provides this
-feature. The number of parallel processes is controlled by the
+Enable parallel builds if underlying build system supports them.
+The number of parallel jobs is controlled by the
 DEB_BUILD_OPTIONS environment variable (L<Debian Policy, section 4.9.1>) at
-build time. It might also be subject to the build system specific limit.
+build time. It might also be subject to a build system specific limit.
 
 If this option is not specified, debhelper currently defaults to not
-supporting parallel package builds.
+allowing parallel package builds.
 
 =item B<--max-parallel>I<=maximum>
 
-This option implies L<--parallel> and allows to further limit the number of
+This option implies L<--parallel> and allows further limiting the number of
 jobs that can be used in a parallel build. If the package build is known to
 only work with certain levels of concurrency, you can set this to the maximum
-level that is known to work, or that you wish to support. If set to 1, parallel
-builds will be effectively forbidden.
+level that is known to work, or that you wish to support.
 
 =item B<--list>, B<-l>
 
