--- a/doc/TODO
+++ b/doc/TODO
@@ -9,6 +9,7 @@ v8:
 * make dh_install use hard links for efficiency
 * dh_installinit --restart-after-upgrade as default?
 * #487006: dh_installman with 3-letter codes
+* apply patch in #557603 (breaks compatability slightly; see #560120)
 
 Deprecated:
 
