dh(1): Minor rewording of documentation of override commands. Closes: #560421

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.11) UNRELEASED; urgency=low
+
+  * dh(1): Minor rewording of documentation of override commands.
+    Closes: #560421
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
+
 debhelper (7.4.10) unstable; urgency=low
 
   * Add --parallel option that can be used to enable parallel building
