dh(1): Add an example of using an override target to avoid dh running several commands. Closes: #560600

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (7.4.11) UNRELEASED; urgency=low
 
   * dh(1): Minor rewording of documentation of override commands.
     Closes: #560421
+  * dh(1): Add an example of using an override target to avoid
+    dh running several commands. Closes: #560600
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
 
