dhinstallman: Avoid doubled slashes in path. Closes: #561275

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (7.4.11) UNRELEASED; urgency=low
     Closes: #560421
   * dh(1): Add an example of using an override target to avoid
     dh running several commands. Closes: #560600
+  * dhinstallman: Avoid doubled slashes in path. Closes: #561275
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
 
