dh_installxfonts: Use new update-fonts-alias --include and --exclude options to better handle removal in the case where xfonts-utils is removed before a font package is purged. (#543512; thanks, Theppitak Karoonboonyanan)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ debhelper (7.4.11) UNRELEASED; urgency=low
   * dh(1): Add an example of using an override target to avoid
     dh running several commands. Closes: #560600
   * dh_installman: Avoid doubled slashes in path. Closes: #561275
+  * dh_installxfonts: Use new update-fonts-alias --include and
+    --exclude options to better handle removal in the case where
+    xfonts-utils is removed before a font package is purged.
+    (#543512; thanks, Theppitak Karoonboonyanan)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
 
