--- a/doc/TODO
+++ b/doc/TODO
@@ -35,3 +35,6 @@ Deprecated:
 * dh_desktop, dh_scrollkeeper. Remove eventually..
 * -s flag, not formally deprecated yet; remove eventually
 * -u flag; add a warning on use and remove eventually
+* delsubstvar() and the last parameter to addsubstvar that makes it remove
+  a string are not used in debhelper itself, but have been left in the
+  library in case other things use them. Deprecate and remove.
