--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (7.4.11) UNRELEASED; urgency=low
     --exclude options to better handle removal in the case where
     xfonts-utils is removed before a font package is purged.
     (#543512; thanks, Theppitak Karoonboonyanan)
+  * dh: Optimise handling of noop overrides, avoiding an unnecessary
+    call to make to handle them. (Modestas Vainius)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
 
