--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.11) UNRELEASED; urgency=low
+debhelper (7.4.11) unstable; urgency=low
 
   * dh(1): Minor rewording of documentation of override commands.
     Closes: #560421
@@ -12,7 +12,7 @@ debhelper (7.4.11) UNRELEASED; urgency=low
   * dh: Optimise handling of noop overrides, avoiding an unnecessary
     call to make to handle them. (Modestas Vainius)
 
- -- Joey Hess <joeyh@debian.org>  Mon, 14 Dec 2009 19:23:25 -0500
+ -- Joey Hess <joeyh@debian.org>  Thu, 31 Dec 2009 11:32:34 -0500
 
 debhelper (7.4.10) unstable; urgency=low
 
