--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.12) UNRELEASED; urgency=low
+
+  * dh_bugfiles: Doc typo. Closes: #563269
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
+
 debhelper (7.4.11) unstable; urgency=low
 
   * dh(1): Minor rewording of documentation of override commands.
