Fix warning about unknown options passed to commands in override targets.
dh used DH_OVERRIDE_UNKNOWN_OPTIONS, which was too broad as it affected
commands run via override targets and caused there to be no warning about
unknown options.

Now unknown options are only ignored when parsing DH_INTERNAL_OPTIONS and
dh's own options.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (7.4.12) UNRELEASED; urgency=low
   * dh_bugfiles: Doc typo. Closes: #563269
   * makefile: Support the (asking for trouble) case of MAKE being set to
     something with a space in it. Closes: #563557
+  * Fix warning about unknown options passed to commands in override targets.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
 
