solve the dh -Bbuild problem
* Add -O option, which can be used to pass options to commands, ignoring
  options that they do not support.
* dh: Use -O to pass user-specified options to the commands it runs.
  This solves the problem with passing "-Bbuild" to dh, where commands
  that do not support -B would see a bogus -u option. Closes: #541773
  (It also ensures that the commands dh prints out can really be run.)

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -156,6 +156,13 @@ This little-used option changes the package which debhelper considers the
 one for which debian/foo files can be used instead of the usual
 debian/package.foo files.
 
+=item B<-O=>I<option|bundle>
+
+This is used by L<dh(1)> when passing user-specified options to all the
+commands it runs. If the command supports the specified option or option
+bundle, it will take effect. If the command does not support the option (or
+any part of an option bundle), it will be ignored.
+
 =back
 
 =head1 COMMON DEBHELPER OPTIONS
