Fix typo in call to abs2rel in --builddir sanitize code. Closes: #567737

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ debhelper (7.4.12) UNRELEASED; urgency=low
     that do not support -B would see a bogus -u option. Closes: #541773
     (It also ensures that the commands dh prints out can really be run.)
   * qmake: New buildsystem contributed by Kel Modderman. Closes: #566840
+  * Fix typo in call to abs2rel in --builddir sanitize code.
+    Closes: #567737
 
  -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
 
