--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.12) UNRELEASED; urgency=low
+debhelper (7.4.12) unstable; urgency=low
 
   * dh_bugfiles: Doc typo. Closes: #563269
   * makefile: Support the (asking for trouble) case of MAKE being set to
@@ -14,7 +14,7 @@ debhelper (7.4.12) UNRELEASED; urgency=low
   * Fix typo in call to abs2rel in --builddir sanitize code.
     Closes: #567737
 
- -- Joey Hess <joeyh@debian.org>  Fri, 01 Jan 2010 13:00:22 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 30 Jan 2010 20:23:02 -0500
 
 debhelper (7.4.11) unstable; urgency=low
 
