--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.13) UNRELEASED; urgency=low
+
+  * dh_compress: Avoid compressing images in /usr/share/info. Closes: #567586
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 31 Jan 2010 14:34:30 -0500
+
 debhelper (7.4.12) unstable; urgency=low
 
   * dh_bugfiles: Doc typo. Closes: #563269
