Fix handling of -O with options specified by commands. Closes: #568081

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (7.4.13) UNRELEASED; urgency=low
 
   * dh_compress: Avoid compressing images in /usr/share/info. Closes: #567586
+  * Fix handling of -O with options specified by commands. Closes: #568081
 
  -- Joey Hess <joeyh@debian.org>  Sun, 31 Jan 2010 14:34:30 -0500
 
