--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.4.13) UNRELEASED; urgency=low
+debhelper (7.4.13) unstable; urgency=low
 
   * dh_compress: Avoid compressing images in /usr/share/info. Closes: #567586
   * Fix handling of -O with options specified by commands. Closes: #568081
 
- -- Joey Hess <joeyh@debian.org>  Sun, 31 Jan 2010 14:34:30 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 02 Feb 2010 12:15:41 -0500
 
 debhelper (7.4.12) unstable; urgency=low
 
