dh: Disable option bundling to avoid mis-parsing bundled options such as "-Bpython-support". Closes: #570039

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.14) unstable; urgency=low
+
+  * dh: Disable option bundling to avoid mis-parsing bundled options such
+    as "-Bpython-support". Closes: #570039
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 Feb 2010 14:47:10 -0500
+
 debhelper (7.4.13) unstable; urgency=low
 
   * dh_compress: Avoid compressing images in /usr/share/info. Closes: #567586
