--- a/doc/TODO
+++ b/doc/TODO
@@ -10,6 +10,9 @@ v8:
 * dh_installinit --restart-after-upgrade as default?
 * #487006: dh_installman with 3-letter codes
 * apply patch in #557603 (breaks compatability slightly; see #560120)
+* clean up dh's handling of options passed onto commands it calls,
+  either by requiring they come after -- , or by one of the other
+  changes discussed in #570039
 
 Deprecated:
 
