--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.4.15) UNRELEASED; urgency=low
+
+  * The fix for #563557 caused some new trouble involving makefile
+    that misbehave when stderr is closed. Reopen it to /dev/null
+    when testing for the existance of a makefile target. Closes: #570443 
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 16:36:18 -0500
+
 debhelper (7.4.14) unstable; urgency=low
 
   * dh: Disable option bundling to avoid mis-parsing bundled options such
