--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.16) UNRELEASED; urgency=low
+
+  * Updated French translation.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
+
 debhelper (7.4.15) unstable; urgency=low
 
   * The fix for #563557 caused some new trouble involving makefile
