--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (7.4.16) UNRELEASED; urgency=low
   * Updated French translation.
   * makefile buildsystem: Chomp output during test for full compatability
     with debhelper 7.4.11. Closes: #570503
+  * dh_install: Now --list-missing and --fail-missing are useful even when
+    not all packages are acted on (due to architecture limits or flags).
+    Closes: #570373
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
 
