--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debhelper (7.4.16) UNRELEASED; urgency=low
   * dh_install: Now --list-missing and --fail-missing are useful even when
     not all packages are acted on (due to architecture limits or flags).
     Closes: #570373
+  * Typo. Closes: #571968
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
 
