dh_md5sums: Sort to ensure stable, more diffable order. Closes: #573702

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (7.4.16) UNRELEASED; urgency=low
     can efficiently be changed to the more sane default of acting on only
     packages that can be built for the current architecture. This change
     is mostly useful when using minimal rules files with dh. Closes: #572077
+  * dh_md5sums: Sort to ensure stable, more diffable order. Closes: #573702
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
 
