dh: Allow --list-addons to be used when not in a source package. Closes: #574351

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ debhelper (7.4.16) UNRELEASED; urgency=low
     packages that can be built for the current architecture. This change
     is mostly useful when using minimal rules files with dh. Closes: #572077
   * dh_md5sums: Sort to ensure stable, more diffable order. Closes: #573702
+  * dh: Allow --list-addons to be used when not in a source package.
+    Closes: #574351
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
 
