dh: Improve documentation.
joeyh: debhelper has an undocumented variable with INTERNAL in its name.
       People keep trying to use it. Why?
liw: debhelper is magic. magic is power derived from secrets. secrets are
     desireable. solution: document it. :)

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ debhelper (7.4.16) UNRELEASED; urgency=low
   * dh_md5sums: Sort to ensure stable, more diffable order. Closes: #573702
   * dh: Allow --list-addons to be used when not in a source package.
     Closes: #574351
+  * dh: Improve documentation.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
 
