--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-debhelper (7.4.16) UNRELEASED; urgency=low
+debhelper (7.4.16) unstable; urgency=low
 
   * Updated French translation.
-  * makefile buildsystem: Chomp output during test for full compatability
+  * makefile buildsystem: Chomp output during test for full compatibility
     with debhelper 7.4.11. Closes: #570503
   * dh_install: Now --list-missing and --fail-missing are useful even when
     not all packages are acted on (due to architecture limits or flags).
@@ -19,7 +19,7 @@ debhelper (7.4.16) UNRELEASED; urgency=low
     Closes: #574351
   * dh: Improve documentation.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 06 Apr 2010 22:06:50 -0400
 
 debhelper (7.4.15) unstable; urgency=low
 
