--- a/doc/TODO
+++ b/doc/TODO
@@ -9,7 +9,7 @@ v8:
 * make dh_install use hard links for efficiency
 * dh_installinit --restart-after-upgrade as default?
 * #487006: dh_installman with 3-letter codes
-* apply patch in #557603 (breaks compatability slightly; see #560120)
+* apply patch in #557603 (breaks compatibility slightly; see #560120)
 * clean up dh's handling of options passed onto commands it calls,
   either by requiring they come after -- , or by one of the other
   changes discussed in #570039
