--- a/doc/TODO
+++ b/doc/TODO
@@ -1,18 +1,19 @@
 This is the TODO for debhelper. As more and more people use debhelper, this
 list grows - I welcome patches to fix items on it!
 
-Wishlist items:
-
 v8:
 
 * escaping in config files (for whitespace)?
-* make dh_install use hard links for efficiency
+* make dh_install use hard links for efficiency (maybe?)
 * dh_installinit --restart-after-upgrade as default?
 * #487006: dh_installman with 3-letter codes
 * apply patch in #557603 (breaks compatibility slightly; see #560120)
 * clean up dh's handling of options passed onto commands it calls,
-  either by requiring they come after -- , or by one of the other
-  changes discussed in #570039
+  by implementing one of the changes discussed in #570039
+  (either change #3, change #4, or change #5; change #0 was done, but 
+  was an incomplete workaround)
+* better package arch filtering for -N , -p (#576990)
+* Convert warning about unknown command-line options back to an error.
 
 Deprecated:
 
@@ -32,9 +33,6 @@ Deprecated:
 * dh_installinit --init-script (make it warn)
 * dh_python
 * dh_clean -k (make it warn (need to make alien not use it 1st!))
-* Convert warning about unknown command-line options back to an error.
-  Need to wait a while (from Oct 2008) to ensure that most rules files
-  that pass unknown options to commands are fixed.
 * dh_desktop, dh_scrollkeeper. Remove eventually..
 * -s flag, not formally deprecated yet; remove eventually
 * -u flag; add a warning on use and remove eventually
