Fix #572077 in one place I missed earlier. (See #576885)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.17) UNRELEASED; urgency=low
+
+  * Fix #572077 in one place I missed earlier. (See #576885)
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 08 Apr 2010 18:21:29 -0400
+
 debhelper (7.4.16) unstable; urgency=low
 
   * Updated French translation.
