--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-debhelper (7.4.17) UNRELEASED; urgency=low
+debhelper (7.4.17) unstable; urgency=low
 
   * Fix #572077 in one place I missed earlier. (See #576885)
+  * dh: Fixed example of overriding binary target.
+  * Began finalizing list of changes for v8 compat level.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 08 Apr 2010 18:21:29 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 08 Apr 2010 18:23:43 -0400
 
 debhelper (7.4.16) unstable; urgency=low
 
