--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2010-04-06 22:02-0300\n"
+"POT-Creation-Date: 2010-04-08 18:23-0300\n"
 "PO-Revision-Date: 2005-09-18 00:11+0200\n"
 "Last-Translator: Rubén Porras Campo <debian-l10n-spanish@lists.debian.org>\n"
 "Language-Team: SPANISH <debian-l10n-spanish@lists.debian.org>\n"
@@ -2000,7 +2000,7 @@ msgstr ""
 #: dh:242
 #, no-wrap
 msgid ""
-"\tbuild: build-arch build-indep\n"
+"\tbuild: build-arch build-indep ;\n"
 "\tbuild-indep:\n"
 "\t\t$(MAKE) docs\n"
 "\tbuild-arch:\n"
