--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2010-04-06 22:02-0300\n"
+"POT-Creation-Date: 2010-04-08 18:23-0300\n"
 "PO-Revision-Date: 2010-02-18 21:31+0100\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -2231,7 +2231,7 @@ msgstr ""
 #: dh:242
 #, no-wrap
 msgid ""
-"\tbuild: build-arch build-indep\n"
+"\tbuild: build-arch build-indep ;\n"
 "\tbuild-indep:\n"
 "\t\t$(MAKE) docs\n"
 "\tbuild-arch:\n"
