--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2010-04-06 22:02-0300\n"
+"POT-Creation-Date: 2010-04-08 18:23-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1496,7 +1496,7 @@ msgstr ""
 #: dh:242
 #, no-wrap
 msgid ""
-"\tbuild: build-arch build-indep\n"
+"\tbuild: build-arch build-indep ;\n"
 "\tbuild-indep:\n"
 "\t\t$(MAKE) docs\n"
 "\tbuild-arch:\n"
