--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.18) UNRELEASED; urgency=low
+
+  * dh_gconf: Depend on new gconf2 that uses triggers, and stop
+    calling triggered programs manually. Closes: #577179
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 10 Apr 2010 13:19:24 -0400
+
 debhelper (7.4.17) unstable; urgency=low
 
   * Fix #572077 in one place I missed earlier. (See #576885)
