--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (7.4.18) UNRELEASED; urgency=low
+debhelper (7.4.18) unstable; urgency=low
 
   * dh_gconf: Depend on new gconf2 that uses triggers, and stop
     calling triggered programs manually. Closes: #577179
 
- -- Joey Hess <joeyh@debian.org>  Sat, 10 Apr 2010 13:19:24 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 16:23:38 -0400
 
 debhelper (7.4.17) unstable; urgency=low
 
