--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (7.4.19) UNRELEASED; urgency=low
+
+  * Memoize architecture comparisons in samearch, and avoid calling
+    dpkg-architecture at all for simple comparisons not involving
+    architecture wildcards. Closes:# 579317
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 19:35:53 -0400
+
 debhelper (7.4.18) unstable; urgency=low
 
   * dh_gconf: Depend on new gconf2 that uses triggers, and stop
