--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.4.19) UNRELEASED; urgency=low
+debhelper (7.4.19) unstable; urgency=low
 
   * Memoize architecture comparisons in samearch, and avoid calling
-    dpkg-architecture at all for simple comparisons not involving
-    architecture wildcards. Closes:# 579317
+    dpkg-architecture at all for simple comparisons that clearly
+    do not involve architecture wildcards. Closes:# 579317
 
- -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 19:35:53 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 26 Apr 2010 19:45:07 -0400
 
 debhelper (7.4.18) unstable; urgency=low
 
