Drop one more call to dpkg-architecture. Closes: #580837 (Raphael Geissert)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (7.4.20) UNRELEASED; urgency=low
+
+  * Drop one more call to dpkg-architecture. Closes: #580837
+    (Raphael Geissert)
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 09 May 2010 11:44:58 -0400
+
 debhelper (7.4.19) unstable; urgency=low
 
   * Memoize architecture comparisons in samearch, and avoid calling
