dh_perl: use debian_abi for XS modules. Closes: #581233

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ debhelper (7.4.20) UNRELEASED; urgency=low
   * Further reduce the number of calls to dpkg-architecture to zero,
     in a typical package with no explicit architecture mentions
     in control file or debhelper config files.
+  * dh_perl: use debian_abi for XS modules. Closes: #581233
 
  -- Joey Hess <joeyh@debian.org>  Sun, 09 May 2010 11:44:58 -0400
 
