--- a/doc/TODO
+++ b/doc/TODO
@@ -14,6 +14,9 @@ v8:
   was an incomplete workaround)
 * better package arch filtering for -N , -p (#576990)
 * Convert warning about unknown command-line options back to an error.
+* Support DEB_BUILD_OPTIONS=debug ; maybe also support passing
+  -g -O2 by default. See patch (and discussion of why this breaks
+  compatability) in #544844.
 
 Deprecated:
 
