--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (7.4.20) UNRELEASED; urgency=low
+debhelper (7.4.20) unstable; urgency=low
 
   * Drop one more call to dpkg-architecture. Closes: #580837
     (Raphael Geissert)
@@ -7,7 +7,7 @@ debhelper (7.4.20) UNRELEASED; urgency=low
     in control file or debhelper config files.
   * dh_perl: use debian_abi for XS modules. Closes: #581233
 
- -- Joey Hess <joeyh@debian.org>  Sun, 09 May 2010 11:44:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 12 May 2010 20:06:02 -0400
 
 debhelper (7.4.19) unstable; urgency=low
 
