--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.4.21) UNRELEASED; urgency=low
+
+  * dh_installman: Support .so links relative to the current section.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
+
 debhelper (7.4.20) unstable; urgency=low
 
   * Drop one more call to dpkg-architecture. Closes: #580837
