--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 debhelper (7.4.21) UNRELEASED; urgency=low
 
   * dh_installman: Support .so links relative to the current section.
+  * dh_installman: Avoid converting .so links to symlinks if the link
+    target is not present in the same binary package, on advice of 
+    Colin Watson. (To support eventual so search paths.)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
