update Package-Type docs
dpkg supports the field now, so no XC- needed

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -510,7 +510,7 @@ none is specified.
 =head2 udebs
 
 Debhelper includes support for udebs. To create a udeb with debhelper,
-add "XC-Package-Type: udeb" to the package's stanza in debian/control, and
+add "Package-Type: udeb" to the package's stanza in debian/control, and
 build-depend on debhelper (>= 4.2). Debhelper will try to create udebs that
 comply with debian-installer policy, by making the generated package files
 end in ".udeb", not installing any documentation into a udeb, skipping over
