In v8 mode, dh_makeshlibs will run dpkg-gensymbols on all shared libraries it generates shlibs files for. This means that -X can be used to exclude libraries from processing by dpkg-gensymbols. It also means that libraries in unusual locations, where dpkg-gensymbols does not itself normally look will be passed to it, a behavior change which may break some packages. Closes: #557603

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -518,6 +518,14 @@ Changes from V7 are:
 
 Commands will fail rather than warning when they are passed unknown options.
 
+=item -
+
+dh_makeshlibs will run dpkg-gensymbols on all shared libraries that it
+generates shlibs files for. So -X can be used to exclude libraries.
+Also, libraries in unusual locations that dpkg-gensymbols would not
+have processed before will be passed to it, a behavior change that 
+can cause some packages to fail to build.
+
 =back
 
 =back
