dh_testversion: Removed this deprecated command.
2 packages in the archive still use it, but both like this:

ifneq ($(shell dh_testversion '<<' 7.4.10 2>/dev/null && echo old),old)
dh_parallel = --parallel
endif

Happily, the way that was written, if the command doesn't exist,
it does the right thing and enables the behavior for the new debhelper.
Not that it would greatly matter if it did not, since --parallel is not
crucial.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ debhelper (7.4.21) UNRELEASED; urgency=low
     means that libraries in unusual locations, where dpkg-gensymbols does
     not itself normally look will be passed to it, a behavior change which
     may break some packages. Closes: #557603
+  * dh_testversion: Removed this deprecated command.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
