--- a/doc/TODO
+++ b/doc/TODO
@@ -33,8 +33,11 @@ Deprecated:
 * delsubstvar() and the last parameter to addsubstvar that makes it remove
   a string are not used in debhelper itself, but have been left in the
   library in case other things use them. Deprecate and remove.
+* dh --before , --after , --until , --remaining
 
 Also, grep the entire archive for all dh_* command lines,
 and check to see what other switches are not being used, and maybe remove
-some of them. I'd also like to deprecate/remove debian/compress files, -X is
+some of them. 
+
+I'd also like to deprecate/remove debian/compress files, -X is
 a better idea.
