debian/compress files are now deprecated. Seems only one package (genesis) still uses them.

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ debhelper (7.4.21) UNRELEASED; urgency=low
     not itself normally look will be passed to it, a behavior change which
     may break some packages. Closes: #557603
   * dh_testversion: Removed this deprecated command.
+  * debian/compress files are now deprecated. Seems only one package
+    (genesis) still uses them.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
