--- a/doc/TODO
+++ b/doc/TODO
@@ -34,10 +34,8 @@ Deprecated:
   a string are not used in debhelper itself, but have been left in the
   library in case other things use them. Deprecate and remove.
 * dh --before , --after , --until , --remaining
+* debian/compress files
 
 Also, grep the entire archive for all dh_* command lines,
 and check to see what other switches are not being used, and maybe remove
 some of them. 
-
-I'd also like to deprecate/remove debian/compress files, -X is
-a better idea.
