--- a/doc/TODO
+++ b/doc/TODO
@@ -33,7 +33,7 @@ Deprecated:
 * delsubstvar() and the last parameter to addsubstvar that makes it remove
   a string are not used in debhelper itself, but have been left in the
   library in case other things use them. Deprecate and remove.
-* dh --before , --after , --until , --remaining
+* dh --before , --after , --until , --remaining (not formally deprecated yet)
 * debian/compress files
 
 Also, grep the entire archive for all dh_* command lines,
