dh_fixperms: Tighten globs used to find library .so files, avoiding incorrectly matching things like "foo.sources". Closes: #583328

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ debhelper (7.4.21) UNRELEASED; urgency=low
   * dh_testversion: Removed this deprecated command.
   * debian/compress files are now deprecated. Seems only one package
     (genesis) still uses them.
+  * dh_fixperms: Tighten globs used to find library .so files,
+    avoiding incorrectly matching things like "foo.sources". Closes: #583328
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
