In v8 mode, dh expects the sequence to run is always its first parameter.
This avoids ambiguities when parsing options to be passed on to debhelper
commands. (See #570039)

In the end, the idea of putting the debhelper command options after --
seemed to need too much knowledge about whether an option like
--buildsystem is a dh option or a command option.

I did consider making no change.. The ambiguities this eliminates are
small. But it seemed worth simplifying dh's option parser, and only about
1/6th of calls to dh in the archive don't put the sequence first already.
(Docs have shown that as the right thing to do for some time.)

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -526,6 +526,11 @@ Also, libraries in unusual locations that dpkg-gensymbols would not
 have processed before will be passed to it, a behavior change that 
 can cause some packages to fail to build.
 
+=item -
+
+dh requires the sequence to run be specified as the first parameter, and
+any switches come after it.
+
 =back
 
 =back
