consistently use v7 not V7 (etc)

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -337,7 +337,7 @@ introduced. You tell debhelper which compatibility level it should use, and
 it modifies its behavior in various ways.
 
 Tell debhelper what compatibility level to use by writing a number to
-debian/compat. For example, to turn on V7 mode:
+debian/compat. For example, to turn on v7 mode:
 
   % echo 7 > debian/compat
 
@@ -352,7 +352,7 @@ These are the available compatibility levels:
 
 =over 4
 
-=item V1
+=item v1
 
 This is the original debhelper compatibility level, and so it is the default
 one. In this mode, debhelper will use debian/tmp as the package tree
@@ -361,16 +361,16 @@ debian/<package> for all other packages listed in the control file.
 
 This mode is deprecated.
 
-=item V2
+=item v2
 
 In this mode, debhelper will consistently use debian/<package>
 as the package tree directory for every package that is built.
 
 This mode is deprecated.
 
-=item V3
+=item v3
 
-This mode works like V2, with the following additions:
+This mode works like v2, with the following additions:
 
 =over 8
 
@@ -391,9 +391,9 @@ Every file in etc/ is automatically flagged as a conffile by dh_installdeb.
 
 This mode is deprecated.
 
-=item V4
+=item v4
 
-Changes from V3 are:
+Changes from v3 are:
 
 =over 8
 
@@ -420,9 +420,9 @@ dh_link will correct existing links to conform with policy.
 
 This mode is deprecated.
 
-=item V5
+=item v5
 
-Changes from V4 are:
+Changes from v4 are:
 
 =over 8
 
@@ -445,9 +445,9 @@ dh_install errors out if wildcards expand to nothing.
 
 =back
 
-=item V6
+=item v6
 
-Changes from V5 are:
+Changes from v5 are:
 
 =over 8
 
@@ -475,11 +475,11 @@ directory. In previous compatibility levels it silently refuses to do this.
 
 =back
 
-=item V7
+=item v7
 
 This is the recommended mode of operation.
 
-Changes from V6 are:
+Changes from v6 are:
 
 =over 8
 
@@ -505,12 +505,12 @@ none is specified.
 
 =back
 
-=item V8
+=item v8
 
 This mode is still under development. Using it in packages will cause them
 to probably break later.
 
-Changes from V7 are:
+Changes from v7 are:
 
 =over 8
 
