--- a/debian/changelog
+++ b/debian/changelog
@@ -11,9 +11,9 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     libraries it generates shlibs files for. This means that -X can be
     used to exclude libraries from processing by dpkg-gensymbols. It also
     means that libraries in unusual locations, where dpkg-gensymbols does
-    not itself normally look will be passed to it, a behavior change which
+    not itself normally look, will be passed to it, a behavior change which
     may break some packages. Closes: #557603
-  * dh_testversion: Removed this deprecated command.
+  * dh_testversion: Removed this deprecated and unused command.
   * debian/compress files are now deprecated. Seems only one package
     (genesis) still uses them.
   * dh_fixperms: Tighten globs used to find library .so files,
