--- a/debhelper.pod
+++ b/debhelper.pod
@@ -529,7 +529,7 @@ can cause some packages to fail to build.
 =item -
 
 dh requires the sequence to run be specified as the first parameter, and
-any switches come after it.
+any switches come after it. Ie, use "dh $@ --foo", not "dh --foo $@"
 
 =back
 
