dh_installchangelogs: Support packages placing their changelog in a file with a name like HISTORY. Closes: #582749

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     (Ie, use "dh $@ --foo", not "dh --foo $@")
     This avoids ambiguities when parsing options to be passed on to debhelper
     commands. (See #570039)
+  * dh_installchangelogs: Support packages placing their changelog in a
+    file with a name like HISTORY. Closes: #582749
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
