dh_installchangelogs: Also look for changelog files in doc(s) subdirectories. Closes: #521258

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     commands. (See #570039)
   * dh_installchangelogs: Support packages placing their changelog in a
     file with a name like HISTORY. Closes: #582749
+  * dh_installchangelogs: Also look for changelog files in doc(s)
+    subdirectories. Closes: #521258
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
