In v8 mode, prefer the perl_build buildsystem over perl_makemaker. Closes: #578805

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -531,6 +531,10 @@ can cause some packages to fail to build.
 dh requires the sequence to run be specified as the first parameter, and
 any switches come after it. Ie, use "dh $@ --foo", not "dh --foo $@"
 
+=item
+
+dh_auto_* prefer to use perl's Module::Build in preference to Makefile.PL.
+
 =back
 
 =back
