--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     file with a name like HISTORY. Closes: #582749
   * dh_installchangelogs: Also look for changelog files in doc(s)
     subdirectories. Closes: #521258
+  * In v8 mode, prefer the perl_build buildsystem over perl_makemaker.
+    Closes: #578805
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
