--- a/doc/TODO
+++ b/doc/TODO
@@ -12,8 +12,7 @@ v9:
 Deprecated:
 
 * DH_COMPAT 1, 2, 3, 4. Can be removed once all packages are seen to be using
-  a newer version. I won't hold my breath. Now with evil warning messages
-  though.
+  a newer version. I won't hold my breath. (2 and 3 are getting close though.)
 * dh_suidregister. Once nothing in the archive uses it.
 * dh_installmanpages.
 * dh_movefiles. I won't hold my breath. Have not added deprecation
