postrm-init: Avoid calling the error handler if update-rc.d fails. Closes: #586065

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ debhelper (7.9.1) UNRELEASED; urgency=low
     commands. (See #570039)
   * In v8 mode, prefer the perl_build buildsystem over perl_makemaker.
     Closes: #578805
+  * postrm-init: Avoid calling the error handler if update-rc.d fails.
+    Closes: #586065
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
 
