--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-debhelper (7.9.1) UNRELEASED; urgency=low
+debhelper (7.9.1) unstable; urgency=low
 
+  * Started work on Debhelper v8. It is still experimental, and more
+    changes are planned for that mode.
   * dh_installman: Support .so links relative to the current section.
   * dh_installman: Avoid converting .so links to symlinks if the link
     target is not present in the same binary package, on advice of 
@@ -31,7 +33,7 @@ debhelper (7.9.1) UNRELEASED; urgency=low
   * postrm-init: Avoid calling the error handler if update-rc.d fails.
     Closes: #586065
 
- -- Joey Hess <joeyh@debian.org>  Mon, 17 May 2010 20:01:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 16 Jun 2010 13:44:48 -0400
 
 debhelper (7.4.20) unstable; urgency=low
 
