--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (7.9.2) UNRELEASED; urgency=low
+debhelper (7.9.2) unstable; urgency=low
 
   * In v8 mode, stop passing packlist=0 in perl_makemaker buildsystem,
     since perl_build is tried first. Avoids the makemaker warning message
     introduced by the fix to #527990.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 23 Jun 2010 20:36:16 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 29 Jun 2010 17:41:41 -0400
 
 debhelper (7.9.1) unstable; urgency=low
 
