perl_makemaker: import compat(). Closes: #587654

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (7.9.3) UNRELEASED; urgency=low
+
+  * perl_makemaker: import compat(). Closes: #587654
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 30 Jun 2010 14:37:35 -0400
+
 debhelper (7.9.2) unstable; urgency=low
 
   * In v8 mode, stop passing packlist=0 in perl_makemaker buildsystem,
