--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-debhelper (7.9.3) UNRELEASED; urgency=low
+debhelper (7.9.3) unstable; urgency=low
 
   * perl_makemaker: import compat(). Closes: #587654
 
- -- Joey Hess <joeyh@debian.org>  Wed, 30 Jun 2010 14:37:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 30 Jun 2010 14:42:09 -0400
 
 debhelper (7.9.2) unstable; urgency=low
 
